Fix stretched images in the sidebar menu

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,7 @@ mat-sidenav-container {
   width: 100%;
 }
 mat-sidenav mat-nav-list img {
+  object-fit: cover;
   height: 2em;
   width: 2em;
   margin-left: 1em;
